--- a/config/item-service-dev.yml
+++ b/config/item-service-dev.yml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: item-service
+  rabbitmq:
+    host: 176.212.33.21
+    port: 15672
+    username: admin
+    password: admin
  
  
   cloud:
