--- a/config/turbine-dev.yml
+++ b/config/turbine-dev.yml
@@ -2,6 +2,11 @@
 spring:
   application:
     name: turbin
+  rabbitmq:
+    host: 176.212.33.21
+    port: 15672
+    username: admin
+    password: admin
     
 server:
   port: 5001
