--- a/config/user-service-dev.yml
+++ b/config/user-service-dev.yml
@@ -5,6 +5,11 @@ sp:
 spring:
   application:
     name: user-service
+  rabbitmq:
+    host: 176.212.33.21
+    port: 15672
+    username: admin
+    password: admin
     
 server:
   port: 8101
